# detegasa_product

./: .env.example  .gitignore  INSTALL.md  README.md  docker-compose.yml  pyproject.toml
ESPECIFICACION DE CLIENTE/APPENDIX 10_E&I TECHNICAL COMPLIANCE CHECK SHEET/: E&I technical compliance check sheet_DETEGASA.XLS
ESPECIFICACION DE CLIENTE/APPENDIX 12_TECHNICAL BID EVALUATION TABLE/: Technical Bid Evaluation Table(TBT).xlsx
ESPECIFICACION DE CLIENTE/APPENDIX 14_E&I TIE-IN DOCUMENT GUIDANCE TO VENDOR/: 2. Appendix_Template_E&I Tie-In Doc Guidance.dwg  3. P-78 INST CABLES OUTER SHEATH & CONDUCTOR COLORS.xlsx
ESPECIFICACION DE CLIENTE/APPENDIX 5_VDRL/: APPENDIX5_VENDOR DATA REQUIREMENT LIST.xls  APPENDIX5_VENDOR DATA REQUIREMENT LIST_actualizado DTG.xls
ESPECIFICACION DE CLIENTE/APPENDIX 6_TECHNICAL CLARIFICATION SHEET/: Technical Clarification(TC)_Detegasa.xlsx
ESPECIFICACION DE CLIENTE/APPENDIX 7_PROJECT STANDARD FORMAT/: TQF-P78-KES-DD-HUL-SUB-00XX _Template (2).xlsx
PIPELINE/: PLAN.md  proceso.md
PIPELINE/01_fundamentos/: README.md
alembic/: env.py
docs/: product_schema.md
scripts/: compliance_test.py  e2e_extraction_test.py  e2e_results.json
src/: __init__.py
src/llm/: cache.py  (+6 more)
tests/: conftest.py  test_certification_matcher.py  test_chunker.py  test_compliance_engine.py  test_config.py  test_document_type.py  test_llm_adapters.py  test_llm_extraction.py  test_material_matcher.py  test_models.py  test_pdf_parser.py  test_process_matcher.py  test_schemas.py  test_text_cleaner.py  test_unit_converter.py  test_xlsx_parser.py
viewer/: index.html
(+85 files in other folders)
