[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "separador-sentinas"
version = "0.1.0"
description = "Sistema de compliance de licitaciones con IA para equipos maritimos (DETEGASA)"
readme = "PIPELINE/proceso.md"
requires-python = ">=3.11"
license = { text = "Proprietary" }

dependencies = [
    # Web framework
    "fastapi>=0.115",
    "uvicorn>=0.34",
    "python-multipart>=0.0.18",

    # Database
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "pgvector>=0.4",

    # LLM
    "anthropic>=0.70",
    "openai>=2.15",
    "instructor>=1.7",
    "langfuse>=2.0",
    "tenacity>=9.0",
    "tiktoken>=0.8",

    # PDF / Document parsing
    "PyMuPDF>=1.25",
    "pdfplumber>=0.11",
    "openpyxl>=3.1",
    "xlrd>=2.0",

    # Data
    "pydantic>=2.10",
    "pydantic-settings>=2.7",
    "pandas>=2.2",

    # HTTP client
    "httpx>=0.28",

    # Frontend
    "streamlit>=1.40",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]
local-embeddings = [
    "sentence-transformers>=3.0",
]
docling = [
    "docling>=2.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
pythonpath = ["."]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.hatch.build.targets.wheel]
packages = ["src"]
